--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@nestjs/common": "^5.6.2",
-    "@nestjs/core": "^5.6.2",
-    "@nestjs/websockets": "^5.6.2",
+    "@nestjs/common": "^6.2.4",
+    "@nestjs/core": "^6.2.4",
+    "@nestjs/platform-express": "^6.2.4",
+    "@nestjs/platform-socket.io": "^6.2.4",
+    "@nestjs/websockets": "^6.2.4",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angulartics2": "^7.4.1",
